# qlora-rs

./: ANALYSIS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE-APACHE  PHASE1.2_COMPLETE.md  PR_PHASE1.2_DOUBLE_QUANTIZATION.md  PR_PHASE1_INFRASTRUCTURE.md  README.md  RELEASE_v0.1.1.md  RESOLUTION_SUMMARY.md  STATUS.md  roadmap.md
.github/skills/qlora-quantization-impl/: SKILL.md
.github/workflows/: quality.yml  release.yml
benches/: quantization.rs
examples/: basic_quantization.rs  qlora_inference.rs  qlora_training.rs
src/: error.rs  export.rs  formats.rs  lib.rs  native.rs  qlora.rs  quantization.rs  training.rs
src/kernels/: fp4.rs  fused.rs  mod.rs  nf4.rs
tests/: training_integration.rs
