[package]
name = "qlora-rs"
version = "1.0.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "4-bit quantized LoRA (QLoRA) implementation with dual GGUF and Candle native export for Rust"
repository = "https://github.com/tzervas/qlora-rs"
homepage = "https://github.com/tzervas/qlora-rs"
documentation = "https://docs.rs/qlora-rs"
keywords = ["qlora", "quantization", "lora", "4bit", "gguf"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = [
    ".github/*",
    "benches/*",
    "tests/*",
    "*.md",
    "!README.md",
]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
anyhow = "1.0"

# peft-rs dependency - published version includes required weights() methods
peft-rs = "0.4.1"

# GGUF support (for future: gguf = "0.1")
byteorder = "1.5"
memmap2 = "0.9"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"
approx = "0.5"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
cuda = ["candle-core/cuda", "peft-rs/cuda"]
gguf-export = []
native-export = []
logging = ["log"]

[dependencies.log]
version = "0.4"
optional = true

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
nursery = "allow"
pedantic = "allow"

[[bench]]
name = "quantization"
harness = false

[[example]]
name = "basic_quantization"
path = "examples/basic_quantization.rs"

[[example]]
name = "qlora_inference"
path = "examples/qlora_inference.rs"

[[example]]
name = "qlora_training"
path = "examples/qlora_training.rs"

# Optional: Uncomment to use local peft-rs for development
# [patch."https://github.com/tzervas/peft-rs"]
# peft-rs = { path = "../peft-rs" }
