[package]
name = "qlora-rs"
version = "1.0.2"
edition = "2021"
rust-version = "1.92"
license = "MIT"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "4-bit quantized LoRA (QLoRA) implementation with dual GGUF and Candle native export for Rust"
repository = "https://github.com/tzervas/qlora-rs"
homepage = "https://github.com/tzervas/qlora-rs"
documentation = "https://docs.rs/qlora-rs"
keywords = ["qlora", "quantization", "lora", "4bit", "gguf"]
categories = ["science", "algorithms"]
readme = "README.md"
exclude = [
    ".github/*",
    "benches/*",
    "tests/*",
    "*.md",
    "!README.md",
]

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# peft-rs dependency - published version includes required weights() methods
peft-rs = "1.0"

# GGUF support (for future: gguf = "0.1")
byteorder = "1.5"
memmap2 = "0.9"

# GPU support via CubeCL (optional)
cubecl = { workspace = true, optional = true }
cubecl-cuda = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = "1.4"
tempfile = "3.8"
approx = "0.5"
tokio = { workspace = true }

[features]
default = []
cuda = ["candle-core/cuda", "peft-rs/cuda", "dep:cubecl", "dep:cubecl-cuda"]
gguf-export = []
native-export = []
logging = ["log"]

[dependencies.log]
version = "0.4"
optional = true

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
complexity = "warn"
perf = "warn"
style = "warn"
nursery = "allow"
pedantic = "allow"

[[bench]]
name = "quantization"
harness = false

[[example]]
name = "basic_quantization"
path = "examples/basic_quantization.rs"

[[example]]
name = "qlora_inference"
path = "examples/qlora_inference.rs"

[[example]]
name = "qlora_training"
path = "examples/qlora_training.rs"

# Optional: Uncomment to use local peft-rs for development
# [patch."https://github.com/tzervas/peft-rs"]
# peft-rs = { path = "../peft-rs" }
